--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "modsen-film",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "homepage": "https://bartimeu1.github.io/modsen-film/",
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "start": "webpack server --open",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.23.4",
     "@babel/core": "^7.23.3",
@@ -19,6 +16,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/styled-components": "^5.1.31",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "babel-loader": "^9.1.3",
@@ -27,6 +25,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^6.1.0",
     "html-webpack-plugin": "^5.5.3",
     "prettier": "^3.1.0",
     "style-loader": "^3.3.3",
@@ -37,7 +36,10 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "styled-components": "^6.1.1"
   }
 }
