--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "gh-pages": "^6.1.0",
     "html-webpack-plugin": "^5.5.3",
     "prettier": "^3.1.0",
