--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,16 @@
     "esModuleInterop": true,
     "allowJs": true,
     "checkJs": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "baseUrl": "./",
+    "paths": {
+      "@root/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@utils/*": ["src/utils/*"],
+      "@constants/*": ["src/constants/*"],
+      "@store/*": ["src/store/*"],
+      "@assets/*": ["src/assets/*"],
+    }
   },
   "include": ["src/**/**/*"],
   "exclude": ["node_modules"]
