--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "webpack --config webpack.config.ts",
     "start": "webpack server --open",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test:cypress": "cypress open"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.4",
@@ -25,6 +26,7 @@
     "@typescript-eslint/parser": "^6.12.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "cypress": "^13.6.0",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
