--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
       "@assets/*": ["src/assets/*"],
     }
   },
-  "include": ["src/**/**/*"],
+  "include": ["src/**/**/*", "cypress"],
   "exclude": ["node_modules"]
 }
